compiler/plc_parser/src/parser/tests/snapshots/plc_parser__parser__tests__expressions_parser_tests__assignment_test.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: prg
---
[
    Assignment {
        left: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "x",
                },
            ),
            base: None,
        },
        right: LiteralInteger {
            value: 3,
        },
    },
    Assignment {
        left: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "x",
                },
            ),
            base: None,
        },
        right: BinaryExpression {
            operator: Plus,
            left: LiteralInteger {
                value: 1,
            },
            right: LiteralInteger {
                value: 2,
            },
        },
    },
]
