compiler/plc_parser/src/parser/tests/snapshots/plc_parser__parser__tests__expressions_parser_tests__expression_list.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
ExpressionList {
    expressions: [
        LiteralInteger {
            value: 1,
        },
        LiteralInteger {
            value: 2,
        },
        LiteralInteger {
            value: 3,
        },
    ],
}
