compiler/plc_parser/src/parser/tests/snapshots/plc_parser__parser__tests__expressions_parser_tests__expression_list_assignments.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
ExpressionList {
    expressions: [
        Assignment {
            left: ReferenceExpr {
                kind: Member(
                    Identifier {
                        name: "x",
                    },
                ),
                base: None,
            },
            right: LiteralInteger {
                value: 1,
            },
        },
        Assignment {
            left: ReferenceExpr {
                kind: Member(
                    Identifier {
                        name: "y",
                    },
                ),
                base: None,
            },
            right: LiteralInteger {
                value: 2,
            },
        },
        Assignment {
            left: ReferenceExpr {
                kind: Member(
                    Identifier {
                        name: "z",
                    },
                ),
                base: None,
            },
            right: LiteralInteger {
                value: 3,
            },
        },
    ],
}
