compiler/plc_parser/src/parser/tests/snapshots/plc_parser__parser__tests__expressions_parser_tests__function_call_no_params.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
CallStatement {
    operator: ReferenceExpr {
        kind: Member(
            Identifier {
                name: "fn",
            },
        ),
        base: None,
    },
    parameters: None,
}
