compiler/plc_parser/src/parser/tests/snapshots/plc_parser__parser__tests__expressions_parser_tests__literal_binary_with_underscore_number_can_be_parsed.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
LiteralInteger {
    value: 45,
}
