compiler/plc_parser/src/parser/tests/snapshots/plc_parser__parser__tests__expressions_parser_tests__literal_enum_parse_test.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
[
    ReferenceExpr {
        kind: Cast(
            Identifier {
                name: "Val7",
            },
        ),
        base: Some(
            ReferenceExpr {
                kind: Member(
                    Identifier {
                        name: "MyEnum",
                    },
                ),
                base: None,
            },
        ),
    },
    ReferenceExpr {
        kind: Cast(
            Identifier {
                name: "Val2",
            },
        ),
        base: Some(
            ReferenceExpr {
                kind: Member(
                    Identifier {
                        name: "MyEnum",
                    },
                ),
                base: None,
            },
        ),
    },
    ReferenceExpr {
        kind: Cast(
            Identifier {
                name: "Val3",
            },
        ),
        base: Some(
            ReferenceExpr {
                kind: Member(
                    Identifier {
                        name: "MyEnum",
                    },
                ),
                base: None,
            },
        ),
    },
]
